objects/SVMXC__Service_Template_Products__c.object
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>A service template can be used to define the type and scope of coverage in a warranty such as parts, labor and expenses, and can then be associated with one or more products. When installed product records are created in ServiceMax, warranty will be calculated automatically based on the pre-defined service template associated with the product.</description>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Product__r.Brand2__c,Product__r.Brand2__r.Name,Product__r.Brand2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Type__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Product__r.DeviceType2__c,Product__r.DeviceType2__r.Name,Product__r.DeviceType2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Device Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>New Lookup to Product2</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Applicable Products (Product)</relationshipLabel>
        <relationshipName>Applicable_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Range__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Product__r.CategoryId__c,Product__r.CategoryId__r.Name,Product__r.CategoryId__c)</formula>
        <label>Range</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <formula>Product__r.SKU__c</formula>
        <label>SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Product_Family__c</fullName>
        <description>Product Family covered by this template.</description>
        <inlineHelpText>Product Family covered by this template.</inlineHelpText>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accessory</fullName>
                </value>
                <value>
                    <fullName>Bundle</fullName>
                </value>
                <value>
                    <fullName>Dimension</fullName>
                </value>
                <value>
                    <fullName>Latitude</fullName>
                </value>
                <value>
                    <fullName>OptiPlex</fullName>
                </value>
                <value>
                    <fullName>PowerConnect</fullName>
                </value>
                <value>
                    <fullName>PowerEdge</fullName>
                </value>
                <value>
                    <fullName>PowerVault</fullName>
                </value>
                <value>
                    <fullName>Precision</fullName>
                </value>
                <value>
                    <fullName>Vostro</fullName>
                </value>
                <value>
                    <fullName>XPS</fullName>
                </value>
                <value>
                    <fullName>Antivirus</fullName>
                </value>
                <value>
                    <fullName>Recovery</fullName>
                </value>
                <value>
                    <fullName>Productivity</fullName>
                </value>
                <value>
                    <fullName>Operating System</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Database</fullName>
                </value>
                <value>
                    <fullName>Desktop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Product_Line__c</fullName>
        <description>Product Line covered by this template.</description>
        <inlineHelpText>Product Line covered by this template.</inlineHelpText>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accessory</fullName>
                </value>
                <value>
                    <fullName>Desktop</fullName>
                </value>
                <value>
                    <fullName>Laptop</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Server</fullName>
                </value>
                <value>
                    <fullName>Solution</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product covered by the template. Is a lookup to an existing product in Salesforce</description>
        <inlineHelpText>Product covered by the template. Is a lookup to an existing product in Salesforce</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>R00N70000001hzbbEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Template__c</fullName>
        <description>Name of the warranty template. Is a lookup to an existing warranty template in ServiceMax</description>
        <inlineHelpText>Name of the warranty template. Is a lookup to an existing warranty template in ServiceMax</inlineHelpText>
        <label>Warranty Terms</label>
        <referenceTo>SVMXC__Service_Template__c</referenceTo>
        <relationshipName>R00N70000001hzbrEAA</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TECH_IsEnriched__c</fullName>
        <formula>Product__r.TECH_IsEnriched__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TECH_IsEnriched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_BDRIdSet__c</fullName>
        <formula>Product__r.Brand2__c+&apos;-&apos;+Product__r.CategoryId__c+&apos;-&apos;+Product__r.DeviceType2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech_BDRIdSet</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_WarrentyConcatenate__c</fullName>
        <formula>SVMXC__Service_Template__c &amp;&quot;-&quot;&amp; Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech_WarrentyConcatenate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueAPId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>UniqueAPId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Applicable Product</label>
    <nameField>
        <displayFormat>WTPN-{000000}</displayFormat>
        <label>Template Product ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applicable Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>